--- a/movies.html
+++ b/movies.html
@@ -13,7 +13,25 @@
   </div>
 
   <!-- Put the Firebase config here -->
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
 
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+     <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-firestore.js"></script>
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyCogcidkk_Vjaa8gS7flxV-VVECoII_KJE",
+    authDomain: "kiei-451-11c20.firebaseapp.com",
+    projectId: "kiei-451-11c20",
+    storageBucket: "kiei-451-11c20.appspot.com",
+    messagingSenderId: "260034782064",
+    appId: "1:260034782064:web:5326a290f4f107ccd665b5"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
   <script src="movies.js"></script>
 </body>
 </html>
